tests/jastadd/negative/name_errors/L3/7_NonProcedureCall3.ob
MODULE TestModule;
	VAR a : INTEGER;
	PROCEDURE f;
	END f;
BEGIN
    f;
    a
END TestModule.
